--- a/src/main/resources/view/SelectionMain.fxml
+++ b/src/main/resources/view/SelectionMain.fxml
@@ -7,5 +7,6 @@
       <fx:include fx:id="selection" source="Selection.fxml" />
       <fx:include fx:id="selectionForum" source="SelectionForum.fxml" />
       <fx:include fx:id="selectionEmpty" source="SelectionEmpty.fxml" />
+      <fx:include fx:id="selectionCourseModule" source="SelectionCourseModule.fxml" />
    </children>
 </StackPane>
