--- a/src/main/resources/view/SelectionUser.fxml
+++ b/src/main/resources/view/SelectionUser.fxml
@@ -14,148 +14,155 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import org.controlsfx.control.CheckComboBox?>
 
-<TabPane fx:id="tabPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.SelectionUserController">
-   <tabs>
-      <Tab fx:id="tabEnrolled" closable="false" text="%tab.enrolleduser">
-         <content>
-            <BorderPane>
-            	<center>
-            		<ListView fx:id="listParticipants" prefHeight="200.0" prefWidth="200.0" styleClass="list-view-class" BorderPane.alignment="CENTER">
-            			<placeholder>
-            				<Label text="%text.nousers" />
-            			</placeholder>
-            		</ListView>
-            	</center>
-            	<top>
-            		<GridPane hgap="5.0" vgap="5.0" BorderPane.alignment="CENTER">
-            			<columnConstraints>
-            				<ColumnConstraints hgrow="SOMETIMES" />
-            				<ColumnConstraints hgrow="NEVER" />
-            				<ColumnConstraints hgrow="SOMETIMES" prefWidth="100.0" />
-            			</columnConstraints>
-            			<rowConstraints>
-            				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            			</rowConstraints>
-            			<children>
-                        <Label fx:id="lblCountParticipants">
-                           <graphic>
-                              <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../img/participants.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <tooltip>
-                              <Tooltip text="%label.participants" />
-                           </tooltip>
-                        </Label>
-            				<TextField fx:id="tfdParticipants" prefWidth="100.0" promptText="%label.filter" GridPane.hgrow="NEVER" GridPane.rowIndex="1" />
-            				<Label GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-            					<graphic>
-            						<ImageView pickOnBounds="true" preserveRatio="true">
-            							<image>
-            								<Image url="@../img/groups.png" />
-            							</image>
-            						</ImageView>
-            					</graphic>
-            					<tooltip>
-            						<Tooltip text="%tooltip.groups" />
-            					</tooltip>
-            				</Label>
-            				<Label GridPane.columnIndex="1" GridPane.halignment="CENTER">
-            					<graphic>
-            						<ImageView pickOnBounds="true" preserveRatio="true">
-            							<image>
-            								<Image url="@../img/rol.png" />
-            							</image>
-            						</ImageView>
-            					</graphic>
-            					<tooltip>
-            						<Tooltip text="%tooltip.rol" />
-            					</tooltip>
-            				</Label>
-            				<Label GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2">
-            					<tooltip>
-            						<Tooltip text="%tooltip.lastconnection" />
-            					</tooltip>
-            					<graphic>
-            						<ImageView pickOnBounds="true" preserveRatio="true">
-            							<image>
-            								<Image url="@../img/lastconnection.png" />
-            							</image>
-            						</ImageView>
-            					</graphic>
-            				</Label>
-            				<CheckComboBox fx:id="checkComboBoxRole" maxWidth="1.7976931348623157E308" showCheckedCount="true" title="" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" />
-            				<CheckComboBox fx:id="checkComboBoxGroup" maxWidth="1.7976931348623157E308" showCheckedCount="true" title="" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-            				<CheckComboBox fx:id="checkComboBoxActivity" maxWidth="1.7976931348623157E308" showCheckedCount="true" title="" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
-                        <Button mnemonicParsing="false" onAction="#selectAllUsers" text="%button.selectall" wrapText="true" GridPane.rowIndex="2">
-                           <GridPane.margin>
+
+<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.SelectionUserController">
+   <children>
+      <Label text="%label.never" />
+      <TabPane fx:id="tabPane">
+         <tabs>
+            <Tab fx:id="tabEnrolled" closable="false" text="%tab.enrolleduser">
+               <content>
+                  <BorderPane>
+                  	<center>
+                  		<ListView fx:id="listParticipants" prefHeight="200.0" prefWidth="200.0" styleClass="list-view-class" BorderPane.alignment="CENTER">
+                  			<placeholder>
+                  				<Label text="%text.nousers" />
+                  			</placeholder>
+                  		</ListView>
+                  	</center>
+                  	<top>
+                  		<GridPane hgap="5.0" vgap="5.0" BorderPane.alignment="CENTER">
+                  			<columnConstraints>
+                  				<ColumnConstraints hgrow="SOMETIMES" />
+                  				<ColumnConstraints hgrow="NEVER" />
+                  				<ColumnConstraints hgrow="SOMETIMES" prefWidth="100.0" />
+                  			</columnConstraints>
+                  			<rowConstraints>
+                  				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  			</rowConstraints>
+                  			<children>
+                              <Label fx:id="lblCountParticipants">
+                                 <graphic>
+                                    <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../img/participants.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <tooltip>
+                                    <Tooltip text="%label.participants" />
+                                 </tooltip>
+                              </Label>
+                  				<TextField fx:id="tfdParticipants" prefWidth="100.0" promptText="%label.filter" GridPane.hgrow="NEVER" GridPane.rowIndex="1" />
+                  				<Label GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  					<graphic>
+                  						<ImageView pickOnBounds="true" preserveRatio="true">
+                  							<image>
+                  								<Image url="@../img/groups.png" />
+                  							</image>
+                  						</ImageView>
+                  					</graphic>
+                  					<tooltip>
+                  						<Tooltip text="%tooltip.groups" />
+                  					</tooltip>
+                  				</Label>
+                  				<Label GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  					<graphic>
+                  						<ImageView pickOnBounds="true" preserveRatio="true">
+                  							<image>
+                  								<Image url="@../img/rol.png" />
+                  							</image>
+                  						</ImageView>
+                  					</graphic>
+                  					<tooltip>
+                  						<Tooltip text="%tooltip.rol" />
+                  					</tooltip>
+                  				</Label>
+                  				<Label GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2">
+                  					<tooltip>
+                  						<Tooltip text="%tooltip.lastconnection" />
+                  					</tooltip>
+                  					<graphic>
+                  						<ImageView pickOnBounds="true" preserveRatio="true">
+                  							<image>
+                  								<Image url="@../img/lastconnection.png" />
+                  							</image>
+                  						</ImageView>
+                  					</graphic>
+                  				</Label>
+                  				<CheckComboBox fx:id="checkComboBoxRole" maxWidth="1.7976931348623157E308" showCheckedCount="true" title="" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" />
+                  				<CheckComboBox fx:id="checkComboBoxGroup" maxWidth="1.7976931348623157E308" showCheckedCount="true" title="" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
+                  				<CheckComboBox fx:id="checkComboBoxActivity" maxWidth="1.7976931348623157E308" showCheckedCount="true" title="" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
+                              <Button mnemonicParsing="false" onAction="#selectAllUsers" text="%button.selectall" wrapText="true" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                              </Button>
+                  			</children>
+                           <BorderPane.margin>
                               <Insets />
-                           </GridPane.margin>
-                        </Button>
-            			</children>
-                     <BorderPane.margin>
-                        <Insets />
-                     </BorderPane.margin>
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </padding>
-            		</GridPane>
-            	</top>
-            </BorderPane>
-         </content>
-      </Tab>
-      <Tab fx:id="tabNotEnrolled" closable="false" text="%tab.noenrolleduser">
-         <content>
-            <BorderPane prefHeight="200.0" prefWidth="200.0">
-               <center>
-                  <ListView fx:id="listParticipantsOut" prefHeight="200.0" prefWidth="200.0" styleClass="list-view-class" BorderPane.alignment="CENTER">
-                     <placeholder>
-                        <Label text="%text.nousers" />
-                     </placeholder>
-                  </ListView>
-               </center>
-               <top>
-                  <GridPane hgap="5.0" vgap="5.0" BorderPane.alignment="CENTER">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label fx:id="labelNotEnrolled">
-                           <graphic>
-                              <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../img/participants.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <tooltip>
-                              <Tooltip text="%label.participants" />
-                           </tooltip>
-                           <GridPane.margin>
-                              <Insets />
-                           </GridPane.margin>
-                        </Label>
-                        <TextField fx:id="textFieldNotEnrolled" layoutX="15.0" layoutY="40.0" promptText="%label.filter" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" onAction="#selectAllNonUsers" text="%button.selectall" GridPane.rowIndex="2" />
-                     </children>
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                  </GridPane>
-               </top>
-            </BorderPane>
-         </content>
-      </Tab>
-   </tabs>
-</TabPane>
+                           </BorderPane.margin>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                  		</GridPane>
+                  	</top>
+                  </BorderPane>
+               </content>
+            </Tab>
+            <Tab fx:id="tabNotEnrolled" closable="false" text="%tab.noenrolleduser">
+               <content>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0">
+                     <center>
+                        <ListView fx:id="listParticipantsOut" prefHeight="200.0" prefWidth="200.0" styleClass="list-view-class" BorderPane.alignment="CENTER">
+                           <placeholder>
+                              <Label text="%text.nousers" />
+                           </placeholder>
+                        </ListView>
+                     </center>
+                     <top>
+                        <GridPane hgap="5.0" vgap="5.0" BorderPane.alignment="CENTER">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label fx:id="labelNotEnrolled">
+                                 <graphic>
+                                    <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../img/participants.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <tooltip>
+                                    <Tooltip text="%label.participants" />
+                                 </tooltip>
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                              </Label>
+                              <TextField fx:id="textFieldNotEnrolled" layoutX="15.0" layoutY="40.0" promptText="%label.filter" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" onAction="#selectAllNonUsers" text="%button.selectall" GridPane.rowIndex="2" />
+                           </children>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </GridPane>
+                     </top>
+                  </BorderPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
+   </children>
+</StackPane>
