Configuración del curso modificado

--- a/src/main/resources/view/Configuration.fxml
+++ b/src/main/resources/view/Configuration.fxml
@@ -2,12 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import org.controlsfx.control.PropertySheet?>
 
 <GridPane fx:id="gridPane" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.configuration.ConfigurationController">
 	<columnConstraints>
@@ -26,11 +26,11 @@
 				<Image url="@../img/gear.png" />
 			</image>
 		</ImageView>
-		<PropertySheet fx:id="propertySheet" mode="CATEGORY" modeSwitcherVisible="false" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
-			<GridPane.margin>
-				<Insets bottom="20.0" />
-			</GridPane.margin>
-		</PropertySheet>
+      <TabPane fx:id="tabPane" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+         <GridPane.margin>
+            <Insets bottom="20.0" />
+         </GridPane.margin>
+      </TabPane>
 		
 			
 			<Button mnemonicParsing="false" onAction="#restoreConfiguration" text="%button.restore" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
