--- a/src/main/resources/view/Configuration.fxml
+++ b/src/main/resources/view/Configuration.fxml
@@ -3,8 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -16,25 +14,19 @@
 		<ColumnConstraints />
 	</columnConstraints>
 	<rowConstraints>
-		<RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
 		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 	</rowConstraints>
 	<children>
-		<ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-			<image>
-				<Image url="@../img/gear.png" />
-			</image>
-		</ImageView>
-      <TabPane fx:id="tabPane" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+      <TabPane fx:id="tabPane" GridPane.columnSpan="2147483647" GridPane.vgrow="ALWAYS">
          <GridPane.margin>
             <Insets bottom="20.0" />
          </GridPane.margin>
       </TabPane>
 		
 			
-			<Button mnemonicParsing="false" onAction="#restoreConfiguration" text="%button.restore" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-      <Button defaultButton="true" mnemonicParsing="false" onAction="#apply" text="%button.apply" GridPane.rowIndex="2" />
+			<Button mnemonicParsing="false" onAction="#restoreConfiguration" text="%button.restore" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+      <Button defaultButton="true" mnemonicParsing="false" onAction="#apply" text="%button.apply" GridPane.rowIndex="1" />
 	
 	</children>
 	<padding>
