--- a/src/main/resources/view/WelcomeOffline.fxml
+++ b/src/main/resources/view/WelcomeOffline.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -96,6 +97,7 @@
          <columnConstraints>
             <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="60.0" />
             <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="184.0" minWidth="105.0" prefWidth="184.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="NEVER" />
             <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
@@ -104,12 +106,42 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Label contentDisplay="BOTTOM" text="%label.loggedin" GridPane.rowIndex="1" />
-            <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" text="%label.host" GridPane.rowIndex="2" />
-            <Label fx:id="labelLoggedIn" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="labelHost" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" onAction="#logOut" styleClass="accept_button" text="%button.logout" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-            <Label fx:id="conexionLabel" text="Label" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <Label contentDisplay="BOTTOM" text="%label.loggedin" wrapText="true" GridPane.rowIndex="1" />
+            <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" text="%label.host" wrapText="true" GridPane.rowIndex="2" />
+            <Label fx:id="labelLoggedIn" text="Label" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="labelHost" text="Label" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" onAction="#logOut" styleClass="accept_button" text="%button.logout" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+            <Label fx:id="conexionLabel" text="Label" wrapText="true" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <Label onMouseClicked="#importCourse" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <graphic>
+                  <ImageView pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/file-import-solid.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <tooltip>
+                  <Tooltip text="%tooltip.importcourse" />
+               </tooltip>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
+            <Label onMouseClicked="#exportCourse" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <graphic>
+                  <ImageView pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/file-export-solid.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <tooltip>
+                  <Tooltip text="%tooltip.exportcourse" />
+               </tooltip>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
          </children>
          <cursor>
             <Cursor fx:constant="DEFAULT" />
