--- a/src/main/resources/css/chart.css
+++ b/src/main/resources/css/chart.css
@@ -81,7 +81,7 @@ html,body
 }
 .vis-tooltip{
 	white-space: normal !important;
-	max-width:90% !important;
+	max-width:90.0% !important;
 }
 
 .apexchart-container
@@ -168,18 +168,12 @@ button[disabled] {
     text-align:center;
 }
 
-.canvas-container{
-	width: 100%;
-	height: 95vh;
-	display: block;
-  
+.center {
+  padding: 0.0;
+    display: block;
+    margin: 0.0 auto;
+    max-height: 100.0%;
+    max-width: 100.0%;
+    height:95.0%;
 }
 
-.canvas-word-cloud{
-	position: relative;
-  	max-width: 100%;
-  	max-height: 100%;
-  	left: 50%;
-  	top: 50%;
-  	transform: translate(-50%, -50%);
-}
