--- a/src/main/resources/css/chart.css
+++ b/src/main/resources/css/chart.css
@@ -84,10 +84,6 @@ html,body
 	max-width:90.0% !important;
 }
 
-.apexchart-container
-{
-	clear: both;
-}
 .chart-container
 {
 	height:88.0%;
@@ -114,20 +110,20 @@ html,body
 	height: 100.0%;
 	background-color: transparent;
 	border: none;
-	box-shadow: inset 0.0 -3.0px 0.0px 0.0px #25c5d8;
+	box-shadow: inset 0.0 -3.0px 0.0px 0.0px #0000FF;
 	color: #000000;
 	font-size: 14.0px;
 	font-weight: bold;
 	cursor: pointer;
 	padding-left: 22.0px;
-	background-image: url(./../img/visibility_off.png);
+	background-image: url(../img/visibility_off.png);
 	background-repeat: no-repeat;
 	background-position: center left 2.0px;
 	margin: 2.0px;
 }
 
 .opciones .btn:hover {
-	box-shadow: inset 0.0 -4.0px 0.0px 0.0px #25c5d8;
+	box-shadow: inset 0.0 -4.0px 0.0px 0.0px #0000FF;
 }
 	
 .pestañas {
@@ -157,12 +153,6 @@ button[disabled] {
 	background-color:  #f2f2f2;
 	box-shadow: inset 0.0 -3.0px 0.0px 0.0px #25c5d8;
 }
-
-.apexcharts{
-	font-weight: bold;
-	font-size: 14.0px;
-}
-.apexcharts-data-labels{ display:contents !important; }
 
 .tabulator .tabulator-header .tabulator-col {
     text-align:center;
