Añadido la posibilidad de informar errores y caja de sugerencias

--- a/src/main/resources/view/Menu.fxml
+++ b/src/main/resources/view/Menu.fxml
@@ -67,6 +67,7 @@
                   <MenuItem onAction="#courseStats" text="%menu.coursestats" />
                   <MenuItem onAction="#userGuide" text="%menu.usermanual" />
                   <MenuItem onAction="#gitHubPage" text="%menu.githubpage" />
+                  <MenuItem onAction="#comment" text="%menu.comments" />
                   <MenuItem onAction="#moreInfo" text="%menu.moreinfo" />
                   <MenuItem fx:id="MIAboutUBUGrades" onAction="#aboutApp" text="%menu.about" />
                </items>
