Añadido pestaña de matriculación y grafica de barras

--- a/src/main/resources/view/Comments.fxml
+++ b/src/main/resources/view/Comments.fxml
@@ -52,7 +52,7 @@
             <TextFlow fx:id="textFlowPrivacyPolicy">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%privacyPolicy" />
-                  <Hyperlink text="%label.microsoftFormPolicy" />
+                  <Hyperlink onAction="#openMicrosoftFormPolicy" text="%label.microsoftFormPolicy" />
                </children></TextFlow>
          </children>
       </GridPane>
