--- a/src/main/resources/view/Comments.fxml
+++ b/src/main/resources/view/Comments.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -39,21 +40,24 @@
       <TextField fx:id="textFieldEmail" GridPane.columnIndex="0" GridPane.rowIndex="2" />
       <TextArea fx:id="textAreaComment" promptText="%prompt.comment" GridPane.columnIndex="0" GridPane.rowIndex="5" />
       <Separator prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-      <GridPane hgap="20.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="6">
+      <GridPane hgap="20.0" prefWidth="600.0" vgap="10.0" GridPane.columnSpan="2" GridPane.rowIndex="6">
         <columnConstraints>
             <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" />
           <ColumnConstraints halignment="RIGHT" hgrow="NEVER" minWidth="-Infinity" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="buttonSend" mnemonicParsing="false" onAction="#sendComment" text="%button.send" GridPane.columnIndex="1" />
+            <Button fx:id="buttonSend" mnemonicParsing="false" onAction="#sendComment" text="%button.send" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextFlow fx:id="textFlowPrivacyPolicy">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%privacyPolicy" />
                   <Hyperlink onAction="#openMicrosoftFormPolicy" text="%label.microsoftFormPolicy" />
-               </children></TextFlow>
+               </children>
+            </TextFlow>
+            <CheckBox fx:id="checkBoxAcceptCondition" mnemonicParsing="false" text="%checkBox.acceptCondition" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <GridPane GridPane.columnIndex="0" GridPane.rowIndex="4">
